--- a/src/global.css
+++ b/src/global.css
@@ -59,6 +59,14 @@ h1 {
 
 }
 
+h2 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 57px;
+
+}
+
 p {
     font-family: 'Instrument Sans';
     font-style: normal;
