--- a/src/global.css
+++ b/src/global.css
@@ -67,12 +67,29 @@ h2 {
 
 }
 
+h3 {
+    font-weight: 500;
+    font-family: 'Instrument Sans';
+    font-size: 24px;
+    line-height: 29px;
+}
+
 p {
     font-family: 'Instrument Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 29px;
+}
+
+label {
+    font-weight: 500;
+}
+
+input,
+textarea {
+    font-family: 'Instrument Sans';
+
 }
 
 .no-margin {
